@@ -1,3 +1,7 @@
+Sun Jun 22 12:42:10 2003  Joseph Heled  <pepster@users.sourceforge.net>
+
+	* eval.c (DumpContact): fix for crashed positions. 
+
 Sat Jun 14 13:18:34 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* osr.c: Small rewrite of one sided rollout to handle chequers on the
